# advoc25

./: Cargo.toml
data/2015/: day7a_example.txt
src/: day1.rs  main.rs  parsing.rs
src/common/: arraylike.rs  grid_board.rs  mod.rs  parsing.rs
src/year_2015/: day2.rs  day3.rs  day4.rs  day5.rs  day7.rs  mod.rs
src/year_2024/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/year_2025/: day1.rs  day3.rs  day5.rs  day6.rs  day7.rs  mod.rs
