[package]
name = "advoc25"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "~1.5"
multisets = "~0.0"
nalgebra = "~0.33"
num = "~0.4"
num-rational = "~0.4"
regex = "~1.11"
unordered-pair = "~0.2"
const_format = "~0.2"
log = "~0.4"
env_logger = "~0.11"
clap = { version = "4.5.53", features = ["derive"] }
